<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SetUpContainer"
    tools:context=".ui.setUp.DownloadingAllDataFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent="0.14"
        style="@style/SetUpGuideLineTitle"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:text="@string/setUp_downloading_tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        style="@style/SetUpTvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_description"
        android:text="@string/setUp_downloading_tv_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        style="@style/SetUpTvDescription" />

    <ProgressBar
        android:id="@+id/pb_downloading"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:progressDrawable="@drawable/pb_downloading_background"
        style="?android:attr/progressBarStyleHorizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_progress_done"
        android:text="@string/setUp_downloading_tv_progress_zero"
        android:textColor="@color/black"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pb_downloading"
        style="@style/SetUpTvDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:text="@string/global_btn_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/SetUpBtnContinue" />

</androidx.constraintlayout.widget.ConstraintLayout>